@@ -1,9 +1,10 @@
+# Contributor: Roman Lapin <lampus.lapin@gmail>
 # Contributor: Anton Bazhenov <anton.bazhenov at gmail>
 # Maintainer: dorphell <dorphell@archlinux.org>
 # Committer: Judd Vinet <jvinet@zeroflux.org>
 
 pkgname=gdsl
-pkgver=1.4pl1
+pkgver=1.6
 pkgrel=1
 pkgdesc="A collection of routines for generic data structures manipulation"
 arch=('i686' 'x86_64')
@@ -11,11 +12,12 @@ url="http://home.gna.org/gdsl/"
 license=('GPL')
 depends=('glibc')
 options=('!libtool')
-source=(http://download.gna.org/gdsl/$pkgname-${pkgver/p/-p}.tar.gz)
-md5sums=('fb7f8d33845563f7eb2e75021fa7841f')
+source=("http://download.gna.org/gdsl/$pkgname-${pkgver}.tar.gz")
+md5sums=('8e242affa5421bfb9b18d27edb990bec')
+sha1sums=('2436424d28bef8e0e2ddd559563bf1aa6e8cb701')
 
 build() {
-  cd "$srcdir"/$pkgname-${pkgver/p/-p}
+  cd "$srcdir"/$pkgname-${pkgver}
   ./configure \
     --prefix=/usr \
     --mandir=/usr/share/man || return 1
