@@ -1,0 +1,11 @@
+[Unit]
+Description=OpenTracker Daemon
+After=network.target
+
+[Service]
+User=nobody
+ExecStart=/usr/bin/opentracker -f /etc/opentracker/config
+ExecStop=/bin/kill -INT $MAINPID
+
+[Install]
+WantedBy=multi-user.target
