@@ -1,12 +1,12 @@
 # Maintainer: Simon Zimmermann <simon@insmo.com>
 
 pkgname=pass
-pkgver=1.1.4
-pkgrel=9
+pkgver=1.2
+pkgrel=10
 pkgdesc='stores, retrieves, generates, and synchronizes passwords securely'
 url=http://zx2c4.com/projects/password-store/
 source=(http://git.zx2c4.com/password-store/snapshot/password-store-${pkgver}.tar.xz)
-md5sums=('079c094244ad38ec39fdc92268f36718')
+md5sums=('5ba6cef159320654509f6aaf40c3d84e')
 provides=(pass)
 conficts=(pass-git)
 license='GPL2'
