@@ -1,12 +1,18 @@
-2012-09-03 Build User <jenkins@coast-project.org>
+2012-09-10 Build User <jenkins@coast-project.org>
 
       
+      PKGBUILD prepared for new jenkins-ci version 1.481
+
+
+2012-09-03 Build User <jenkins@coast-project.org>
+
+      jenkins-ci-1.480-1:
       PKGBUILD prepared for new jenkins-ci version 1.480
 
 
 2012-08-30 Marcel Huber <marcelhuberfoo@gmail.com>
 
-      
+     
       adjusted systemd description and added more limit settings
 
 
